# OCTA-graph-extraction

./: .dockerignore  .env  .gitignore  Dockerfile  ETDRS_analysis.py  ETDRS_grid_analysis.py  README.md  ROI_cropping.py  docker-compose.yml  docker_example_ETDRS_analysis.ipynb  faz_segmentation.py  generate_analysis_summary.py  graph_feature_extractor.py  manual_example_ETDRS_analysis.ipynb  pipeline.py  pyproject.toml  requirements.txt  run_analysis.sh  setup.sh
docker/: README.md  dockershell.sh
utils/: ETDRS_grid.py  convert_2d_to_3d.py  visualizer.py  voreen_vesselgraphextraction.py
voreen/: Dockerfile  feature-vesselgraphextraction_customized_command_line.vws
